Disable scheduled runs in invoice_static.yml
Comment out the schedule section in the workflow.

--- a/.github/workflows/invoice_static.yml
+++ b/.github/workflows/invoice_static.yml
@@ -23,8 +23,8 @@ on:
       - 'infection.json.dist'
       - 'phpunit.xml.dist'
 
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+    # - cron: '0 0 * * *'
 
 name: invoice static analysis
 
