Disable scheduled cron job in invoice_build.yml
Comment out the scheduled cron job for invoice build.

--- a/.github/workflows/invoice_build.yml
+++ b/.github/workflows/invoice_build.yml
@@ -20,8 +20,8 @@ on:
       - 'infection.json.dist'
       - 'psalm.xml'
 
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+    # - cron: '0 0 * * *'
 
 name: invoice build
 
