Disable scheduled cron job in invoice_dependency.yml
Comment out the scheduled cron job for invoice dependency checker.

--- a/.github/workflows/invoice_dependency.yml
+++ b/.github/workflows/invoice_dependency.yml
@@ -22,8 +22,8 @@ on:
       - 'phpunit.xml.dist'
       - 'psalm.xml'
 
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+    # - cron: '0 0 * * *'
 
 name: invoice dependency checker
 
